[package]
name = "fabric-meta-api"
version = "0.1.0"
edition = "2024"

[dependencies]
mc-launchermeta = "0.1.1"
reqwest = { version = "0.13.4", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
url = { version = "2.5.8", features = ["serde"] }
creeper-maven-coord = { path = "../creeper-maven-coord" }
anyhow = "1.0.103"
serde_with = "3.21.0"
